--- a/af_rmtp/package.json
+++ b/af_rmtp/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "downloadjs": "^1.4.7",
+    "multer": "^1.4.4",
     "react": "^16.8.6",
+    "react-bootstrap": "^2.3.0",
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^12.0.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
