--- a/af_rmtp/package.json
+++ b/af_rmtp/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "downloadjs": "^1.4.7",
+    "express": "^4.18.0",
+    "mongoose": "^6.3.1",
     "multer": "^1.4.4",
     "react": "^16.8.6",
     "react-bootstrap": "^2.3.0",
-    "react-datepicker": "^2.5.0",
+    "react-datepicker": "^2.16.0",
     "react-dom": "^16.8.6",
     "react-dropzone": "^12.0.5",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
